tests/files/lexer_tests/should_fail/103.cmdr
//Should not parse due to unterminated scope
fn hi() echo hi;}